--- a/app/templates/layout/base.html
+++ b/app/templates/layout/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,49 +10,42 @@
         {% endblock %}
     </title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
-    crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-      <script src="{% static 'js/main.js' %}"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="header" style="background-color: #3F5C73;">
         <nav class="navbar navbar-expand navbar-light">
             <div class="container-fluid">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <span class="material-icons nav-link text-white" data-bs-toggle="offcanvas" data-bs-target="#sidebar">menu</span>
+                        <span class="material-icons nav-link text-white" data-bs-toggle="offcanvas"
+                            data-bs-target="#sidebar">menu</span>
                     </li>
                 </ul>
-    
-                <!-- Right side content -->
-                <!-- <div class="d-flex align-items-center ms-auto">
-                    <span class="navbar-text text-white fw-bold fs-4">
-                        CRUDify | Intelligence Engineering
-                    </span>
-                </div> -->
             </div>
         </nav>
     </div>
-    
+
     {% include 'layout/drawer.html' %}
     <br><br>
-    <div class="container"><br><br><br><br><br>
+    <div class="container"><br><br><br><br>
         <div class="d-flex justify-content-center align-items-center vh-100 ">
-            <div class="p-4 rounded-2 shadow-sm border-2" style="width: 550px;">
+            <div class="p-4 rounded-2 shadow-sm border-2" style="width: auto;">
                 <h2 class="text-center fw-bold mb-3 fs-4">
                     {% block page_name %}
                     {% endblock %}
                 </h2>
                 {% block content %}
                 {% endblock %}
+            </div>
         </div>
-    </div>
-    <script src="{% static 'js/main.js' %}"></script>
+        <script src="{% static 'js/main.js' %}"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
