--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -3,43 +3,48 @@
 {% block title %} CRUDify | Login {% endblock %}
 
 {% block content %}
-
-<!-- {% block page_name %} Selamat Datang kembali! {% endblock %} -->
- 
-<form method="post">
-    {% csrf_token %}
-
-    {% if form.errors %}
-    <div class="alert alert-danger">
-        {% for field in form %}
-            {% for error in field.errors %}
-                <p>{{ error }}</p>
-            {% endfor %}
-        {% endfor %}
-    </div>
-    {% endif %}
-
-    <div class="mb-3 position-relative">
-        <div class="input-group">
-            {{ form.username }}
-        </div>
-        
-    </div>
-
-    <div class="mb-3 position-relative">
-        <div class="input-group">
-            {{ form.password }}
-        </div>
-    </div>
-
-    <div class="mb-3 text-end">
-        <a href="#" class="text-decoration-none text-primary">Lupa Kata Sandi?</a>
-    </div>
-
-    <button type="submit" class="form-submit btn btn-login w-100" style="background-color: #3d5a71; color: white">Masuk</button>
-</form>
-<div class="text-center mt-3">
-    Tidak punya akun? <a href="{% url 'register' %}" class="text-primary text-decoration-none">Daftar Sekarang!</a>
+<div class="p-4 rounded-2 shadow-sm border-2" style="width: 450px;">
+    <h2 class="text-center fw-bold mb-3 fs-4"></h2>
 </div>
 
+<div class="p-4 rounded-2 shadow-sm border-2" style="width: 450px;">
+     <h2 class="text-center fw-bold mb-3 fs-4">Selamat Datang kembali!</h2>
+
+    <form method="post">
+        {% csrf_token %}
+
+        {% if form.errors %}
+        <div class="alert alert-danger">
+            {% for field in form %}
+            {% for error in field.errors %}
+            <p>{{ error }}</p>
+            {% endfor %}
+            {% endfor %}
+        </div>
+        {% endif %}
+
+        <div class="mb-3 position-relative">
+            <div class="input-group">
+                {{ form.username }}
+            </div>
+
+        </div>
+
+        <div class="mb-3 position-relative">
+            <div class="input-group">
+                {{ form.password }}
+            </div>
+        </div>
+
+        <div class="mb-3 text-end">
+            <a href="#" class="text-decoration-none text-primary">Lupa Kata Sandi?</a>
+        </div>
+
+        <button type="submit" class="form-submit btn btn-login w-100"
+            style="background-color: #3d5a71; color: white">Masuk</button>
+    </form>
+    <div class="text-center mt-3">
+        Tidak punya akun? <a href="{% url 'register' %}" class="text-primary text-decoration-none">Daftar Sekarang!</a>
+    </div>
+</div>
 {% endblock %}
