--- a/app/templates/layout/base.html
+++ b/app/templates/layout/base.html
@@ -16,36 +16,46 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
-    <div class="header" style="background-color: #3F5C73;">
-        <nav class="navbar navbar-expand navbar-light">
+<body style="padding-top: 56px;">
+    <div class="header fixed-top" style="background-color: #3F5C73; height: 56px;">
+        <nav class="navbar navbar-expand navbar-light" style="background-color: #3d5a71;">
             <div class="container-fluid">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <span class="material-icons nav-link text-white" data-bs-toggle="offcanvas"
-                            data-bs-target="#sidebar">menu</span>
-                    </li>
-                </ul>
+                <div class="d-flex justify-content-between align-items-center w-100">
+                    <!-- Left-aligned menu icon -->
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <span class="material-icons nav-link text-white" data-bs-toggle="offcanvas"
+                                data-bs-target="#sidebar">menu</span>
+                        </li>
+                    </ul>
+
+                    <!-- Right-aligned CRUDify text -->
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <h3 class="text-white m-0">CRUDify</h3>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
+
     </div>
 
     {% include 'layout/drawer.html' %}
-    <br><br>
-    <div class="container"><br><br><br><br>
-        <div class="d-flex justify-content-center align-items-center vh-100 ">
-            <div class="p-4 rounded-2 shadow-sm border-2" style="width: auto;">
-                <h2 class="text-center fw-bold mb-3 fs-4">
-                    {% block page_name %}
-                    {% endblock %}
-                </h2>
-                {% block content %}
-                {% endblock %}
-            </div>
+
+    <div class="container pt-3">
+        <div class="d-flex justify-content-center align-items-center" style="min-height: calc(100vh - 56px);">
+
+            {% block content %}
+            {% endblock %}
+            
         </div>
-        <script src="{% static 'js/main.js' %}"></script>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    </div>
+
+    <script src="{% static 'js/main.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 
 </html>
